2003-01-03  Stefan Kain  <stefan.kain@freenet.de>

	* lisparit.d, intelem.d: translated all comments

2003-01-03  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* src/makemake.in (init): do not include floatparam.h and
	intparam.h in the init rule for win32.

2003-01-03  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Fix MSVC compilation without libsigsegv
	* spvw.d (main) [WIN32_NATIVE]: do not init SP_bound when
	NO_SP_CHECK - SP_bount is not declared.

2003-01-02  Sam Steingold  <sds@gnu.org>

	* lispbibl.d [WIDE_HARD]: treat UNIX_NETBSD on DECALPHA just like
	UNIX_OSF, UNIX_LINUX and UNIX_FREEBSD
	From Indrayana Rustandi <i_rustandi@yahoo.com>

2002-12-24  Sam Steingold  <sds@gnu.org>

	added VALUE, EITHER and BOTH weak hash tables
	* hashtabl.d (prepare_resize): weak argument is now an object
	(check_weak): new function
	(MAKE-HASH-TABLE, %SET-HASH-TABLE-WEAK-P): use it
	(hash_lookup): value may be obsoleted too
	* constobj.d (type_weak_ht): added
	* constsym.d (Kboth, Keither, Kvalue): added
	* io.d (pr_orecord): print ht_weak() for weak hash tables
	* lispbibl.d (ht_weak): new macro
	(weakkvt_t): added wkvt_type slot
	* spvw_garcol.d (gar_col_normal): handle the new types of weak
	hash tables
	* spvw_typealloc.d (allocate_weakkvt, allocate_weakkvt_low):
	accept a second argument - the wkvt_type

2002-12-24  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-CALL-OUT): fixed argument order in the call
	to fehler_too_few_args()

2002-12-23  Sam Steingold  <sds@gnu.org>

	DOCUMENTATION is now a generic function
	* clos.lisp (ensure-class): use SYS::%SET-DOCUMENTATION explicitly
	(analyze-method-description): pass the method object to
	CHECK-REDEFINITION when possible
	(documentation, (setf documentation)): new generic functions
	* defs2.lisp (defpackage): remember documentation string
	* defstruct.lisp (defstruct): use SYS::%SET-DOCUMENTATION explicitly
	* macros2.lisp (deftype): ditto
	* describe.lisp (describe1): print all documentation